feat:Synchronized锁升级-偏向锁

--- a/concurrent-01/pom.xml
+++ b/concurrent-01/pom.xml
@@ -21,5 +21,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <!--查看对象头工具-->
+    <dependency>
+      <groupId>org.openjdk.jol</groupId>
+      <artifactId>jol-core</artifactId>
+      <version>0.9</version>
+    </dependency>
   </dependencies>
 </project>
