--- a/concurrent-01/pom.xml
+++ b/concurrent-01/pom.xml
@@ -27,5 +27,11 @@
       <artifactId>jol-core</artifactId>
       <version>0.9</version>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.30</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 </project>
